--- a/meal_planner/meal_plans/templates/meal_plans/index.html
+++ b/meal_planner/meal_plans/templates/meal_plans/index.html
@@ -1,3 +1,6 @@
+{% extends 'meal_plans/base.html'  %}
 
+{% block content %}
 <p>This is a page for your meal of the week</p>
 <p> We will show the days here for you </p>
+{% endblock content %}
