--- a/learning_log/learning_logs/templates/learning_logs/topic.html
+++ b/learning_log/learning_logs/templates/learning_logs/topic.html
@@ -2,16 +2,17 @@
 
 {% block content %}
 <p>Topic: {{topic}}</p>
+<a href="{% url 'learning_logs:new_entry' topic.id %}"> Add a New Entry </a>
 <ul> 
 	{% for entry in entries %}
 	   <li><p>{{ entry.date_added|date:'M d, Y H:i' }}</p>
 	   	<p>{{ entry.text|linebreaks }}</p>
+	   	<a href="{% url 'learning_logs:edit_entry' entry.id %}"> Edit Entry </a>
 	   </li>
 	 {% empty %}
 	 <li>There are no entries for this topic yet.</li>
 	{% endfor %}
 
-	
 </ul>
 
 
